objects/Account.object
<CustomObject>
    <fields>
        <fullName>Online_Advertising__c</fullName>
        <label>Online Advertising?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Magic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Adwords</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houzz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angie&apos;s List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thumbtack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RedBeacon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BuildZoom</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Opened_Marketing_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TRUE indicates that this pro opened a marketing email.</description>
        <label>Opened Marketing Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Detail__c</fullName>
        <label>Other Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <description>Displays owner ID on record</description>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Owner ID on Record</inlineHelpText>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Delinquent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Porch_Assist_Date__c</fullName>
        <label>Porch Assist Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Porch_Birthday__c</fullName>
        <label>Porch Birthday</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Porch_URL__c</fullName>
        <label>Porch URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Porch_com_Company_Key_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Back porch unique identifier</inlineHelpText>
        <label>Porch.com Company Key ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Porch_com_User_key__c</fullName>
        <label>Porch.com User key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Any</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (See Description Field)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snail Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premium_Account__c</fullName>
        <formula>CASE( Account_Status__c , 
&quot;Premium&quot;, 1,
&quot;Guaranteed&quot;,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_Hold_Call_Required__c</fullName>
        <label>Premium Hold Call Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premium_Hold_Date__c</fullName>
        <label>Premium Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Hold_Notes__c</fullName>
        <label>Premium Hold Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Premium_Status__c</fullName>
        <label>Premium Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pro_Projects__c</fullName>
        <label>Pro Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pro_Status__c</fullName>
        <label>Pro Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Pause</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stalled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pro_Type__c</fullName>
        <label>Pro Type</label>
        <picklist>
            <picklistValues>
                <fullName>Abrasive Waterjet Cutting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Duct Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Removal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliance Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliance Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arborists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artwork/Murals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asphalt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awnings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathtub Refinishing &amp; Liners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed and Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biohazard Remediation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacksmiths</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blind Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Designers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinet Makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabinet Refacing/Restoration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable TV Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpenters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpet Cleaners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carpet Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Vacuum Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chimney Contractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chimney Sweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computers &amp; Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Contractors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Views__c</fullName>
        <label>Profile Views</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Views__c</fullName>
        <label>Project Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Status__c</fullName>
        <label>Quality Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quality_Subscription_Status__c</fullName>
        <label>Quality Subscription Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Rejected__c</fullName>
        <label>Reason Rejected</label>
        <picklist>
            <picklistValues>
                <fullName>Not qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too busy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t pass reference check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t pass background check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Red_Flags__c</fullName>
        <label>Red Flags</label>
        <picklist>
            <picklistValues>
                <fullName>Unrealistic Lowe&apos;s Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay to be on top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No idea about projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarantee leads first month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know about recurring billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t know about call tracking-Jmpstrt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show - On Boarding Appt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response - 6+ calls, multiple emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expecting 1-month trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No mention of 3-month commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No idea how Porch works</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Referral_Information__c</fullName>
        <label>Referral Information</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <label>Referral Source</label>
        <picklist>
            <picklistValues>
                <fullName>Door-to-Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Owner Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porch Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porch Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Porch Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refferal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Lowe&apos;s Store Region</description>
        <label>Region</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Round Robin Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SalesPerson2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SalesPersonLookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <label>SalesPerson</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <formula>SalesPerson2__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Link__c</fullName>
        <formula>&quot;https://na16.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Impressions__c</fullName>
        <label>Search Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niche</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seller_Tool_Link__c</fullName>
        <formula>&quot;https://back.porch.com/sales/&quot;&amp;Porch_com_Company_Key_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller Tool Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Account_Date__c</fullName>
        <label>Smart Account Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Smart_Account_Eligible__c</fullName>
        <description>Returns 1 if: 
1) pro_type__c is within top 30
2)The following fields are blank:
Porch_birthday__c
account_tag__c
date_cancelled__c
salesperson__c

3)account_type and account_status do not contain the following values:
premium
guaranteed
verified
bad account
imcompatible pro type
untargeted pro type
commercial
duplicate
not qualified</description>
        <formula>IF(
    AND( 
         OR( 
              ispickval(Pro_Type__c, &apos;General Contractors&apos;)
             ,ispickval(Pro_Type__c, &apos;HVAC Contractors&apos;)
             ,ispickval(Pro_Type__c, &apos;Electricians&apos;)
             ,ispickval(Pro_Type__c, &apos;Painters&apos;)
             ,ispickval(Pro_Type__c, &apos;Remodeling Contractors&apos;)
             ,ispickval(Pro_Type__c, &apos;Plumbers&apos;)
             ,ispickval(Pro_Type__c, &apos;Roofers&apos;)
             ,ispickval(Pro_Type__c, &apos;Landscapers&apos;)
             ,ispickval(Pro_Type__c, &apos;Handyman&apos;)
             ,ispickval(Pro_Type__c, &apos;Flooring Contractors&apos;)
             ,ispickval(Pro_Type__c, &apos;Window Contractors&apos;)
             ,ispickval(Pro_Type__c, &apos;Lawn &amp; Garden Services&apos;)
             ,ispickval(Pro_Type__c, &apos;Pest Control Contractors&apos;)
             ,ispickval(Pro_Type__c, &apos;Tree Services&apos;)
             ,ispickval(Pro_Type__c, &apos;Home Cleaners&apos;)
             ,ispickval(Pro_Type__c, &apos;Carpet &amp; Upholstery Cleaners&apos;)
             ,ispickval(Pro_Type__c, &apos;Architects&apos;)
             ,ispickval(Pro_Type__c, &apos;Tile Contractors&apos;)
             ,ispickval(Pro_Type__c, &apos;Concrete &amp; Foundation Services&apos;)
             ,ispickval(Pro_Type__c, &apos;Carpenters&apos;)
             ,ispickval(Pro_Type__c, &apos;Fencing Contractors&apos;)
             ,ispickval(Pro_Type__c, &apos;Garage Door Contractors&apos;)
             ,ispickval(Pro_Type__c, &apos;Cabinet Makers&apos;)
            )
         ,isblank(Porch_Birthday__c) = TRUE
         ,isblank(Date_Cancelled__c) = TRUE
         ,isblank(Last_Login__c) = FALSE
         ,isblank(SalesPerson__c) = TRUE
         ,OR(
            not(ispickval(Account_Status__c, &apos;premium&apos;))
            ,not(ispickval(Account_Status__c, &apos;guaranteed&apos;))
            ,not(ispickval(Account_Status__c, &apos;verified&apos;))
            ,not(ispickval(Account_Status2__c, &apos;bad account&apos;))
            ,not(ispickval(Account_Status2__c, &apos;incompatible pro type&apos;))
            ,not(ispickval(Account_Status2__c, &apos;untargeted pro type&apos;))
            ,not(ispickval(Account_Status2__c, &apos;commercial&apos;))
            ,not(ispickval(Account_Status__c, &apos;duplicate&apos;))
            ,not(ispickval(Account_Status2__c, &apos;not qualified&apos;))
           )
      )
,1

,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Smart Account Eligible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Store_Manager__c</fullName>
        <description>Lowe&apos;s Store Manager</description>
        <label>Store Manager</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <description>Lowe&apos;s Store Number</description>
        <inlineHelpText>Lowe&apos;s Store Number</inlineHelpText>
        <label>Store Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status_Detail__c</fullName>
        <label>Sub-Status Detail</label>
        <picklist>
            <controllingField>Account_Status_Sub_Status__c</controllingField>
            <picklistValues>
                <fullName>Unlicensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBB Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No e-mail Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <description>Super Field based on a formula</description>
        <label>Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>Guaranteed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppressed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Tier__c</fullName>
        <formula>IF( Monthly_Spend__c &gt; 999,&quot;Tier 1&quot;,IF(Monthly_Spend__c &gt; 351,&quot;Tier 2&quot;,IF(Monthly_Spend__c &gt; 199,&quot;Tier 3&quot;,&quot;Tier 4&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppressed_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppressed Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TX_Pro_Status__c</fullName>
        <label>TX Pro Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Welcome Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <formula>if( ISBLANK(Phone),&quot;G&quot;, 

if( CONTAINS(&quot;206:209:213:253:310:323:360:408:415:425:503:509:510:530:559:562:604:619:626:650:661:702:707:714:760:775:778:805:818:831:858:867:909:916:925:949:951:971:236:250:604:778:867&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;F - Pacific&quot;, 

if( 
CONTAINS(&quot;208:250:303:307:385403:406:435:480:505:520:602:623:719:720:780:801:928:970:403:587:780&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;E - Mountain&quot;, 

if( 
CONTAINS(&quot;204:205:210:214:217:218:224:225:228:251:254:256:262:270:281:306:308:309:312:314:316:318:319:320:325:334:337:361:402:405:409:414:417:430:432:469:479:501:504:507:512:515:563:573:580:601:605:608:612:615:618:620:630:636:641:651:660:662:682:708:712:713:715:731:763:769:773:785:806:815:816:817:830:832:847:901:903:913:915:918:920:931:936:940:952:956:972:979:985:204:306:431:639:807&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;D - Central &quot;, 

if( 
CONTAINS(&quot;201:202:203:207:212:215:216:219:226:229:231:234:239:240:248:252:267:269:276:289:301:302:304:305:313:315:321:330:336:339:345:347:351:352:386:404:407:410:412:416:418:419:434:438:440:443:450:470:475:478:484:502:508:513:514:516:517:518:519:540:551:561:567:570:571:585:586:603:606:607:609:610:613:614:616:617:631:646:647:649:678:703:704:705:706:716:717:718:724:727:732:734:740:754:757:770:772:774:781:786:802:803:804:810:813:814:819:828:835:843:845:848:856:857:859:860:862:863:864:865:876:878:904:905:908:910:912:914:917:919:937:941:947:954:959:973:978:980:226:249:289:343:365:416: 413: 437:438:450:514:519:579:581:613:647:705:819:873:905&quot;, left(SUBSTITUTE( Phone , &quot;(&quot;, &quot;&quot;),3)),&quot;C - Eastern&quot;, 

if( 
CONTAINS(&quot;506:709:902&quot;,LEFT(SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),3)),&quot;B - Atlantic&quot;, 

if( 
CONTAINS(&quot;800:877&quot;,LEFT(SUBSTITUTE(Phone,&quot;(&quot;,&quot;&quot;),3)),&quot;Toll Free&quot;,&quot;G - Toll Free/Other&quot;

)

))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Activity_Count__c</fullName>
        <description>Total Activities performed on the account.</description>
        <label>Total Activity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Pro_Type_Pick_List_Zoho__c</fullName>
        <label>Transaction Pro Type</label>
        <picklist>
            <picklistValues>
                <fullName>Handyman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaners</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Profile_Views__c</fullName>
        <label>Unique Profile Views</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upsell_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upsell Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WC_Queue_Number__c</fullName>
        <label>WC Queue Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warm_Pass_Date__c</fullName>
        <label>Warm Pass Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Warm_Pass_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warm Pass by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warm_Pass_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warm Pass to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Website_2__c</fullName>
        <label>Website 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X1st_Scheduled_Meeting_PST__c</fullName>
        <label>1st Scheduled Meeting (PST)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Domain_Mapping__c</fullName>
        <label>Domain Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Result__c</fullName>
        <description>Contains the result of whether the Zendesk system was updated with the Account record changes</description>
        <label>Zendesk Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization_Id__c</fullName>
        <description>Contains the Zendesk ORG Id</description>
        <label>Zendesk Organization Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Organization__c</fullName>
        <description>Specify your Zendesk Organization name here if you&apos;d like to override the default behavior of the ticket view.</description>
        <inlineHelpText>Show Zendesk tickets for the specified organization instead of the combined tickets for all users in the account.</inlineHelpText>
        <label>Zendesk Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_OutofSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True if the record is not synced with Zendesk Organization</description>
        <label>Zendesk_OutofSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_oldTags__c</fullName>
        <description>contains the old tags before changes were made to the tags. To handle deleting tags in Zendesk system.</description>
        <label>Zendesk_oldTags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__createdUpdatedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the account that came for creation to get updated again thereby preventing the loop</description>
        <label>createdUpdatedFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Wait_List__c</fullName>
        <label>Zip Code Wait List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Codes_Purchased__c</fullName>
        <label>Zip Codes Purchased</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoHo_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>ZoHo Account ID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoHo_Owner__c</fullName>
        <label>ZoHo Owner</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>converted_from_lead_helper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>converted from lead helper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>